--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -11,10 +11,18 @@
   copy: force=yes src=../cluster-upstart.conf dest=/etc/init/server-cluster.conf
 
 - name: Configure nginx
-  copy: force=yes src=../nginx.conf dest=/etc/nginx/sites-enabled/default
+  copy: force=yes src=../nginx.conf dest=/etc/nginx/nginx.conf
+  tags: nginx
+
+- name: Stop nginx
+  service: name=nginx state=stopped
   tags: nginx
 
 - name: Configure haproxy
   copy: force=yes src=../haproxy.cfg dest=/etc/haproxy/haproxy.cfg
+  tags: haproxy
+
+- name: Stop haproxy
+  service: name=haproxy state=stopped
   tags: haproxy
 
