--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,51 @@
+user www-data;
+worker_processes auto;
+pid /run/nginx.pid;
 
-server {
-	listen 1337;
-
-	location / {
-		proxy_pass http://node;
-	}
+events {
+	worker_connections 768;
+	multi_accept on;
 }
 
-upstream node {
-	server 127.0.0.1:8001;
-	server 127.0.0.1:8002;
-	server 127.0.0.1:8003;
-	server 127.0.0.1:8004;
+http {
+	##
+	# Basic Settings
+	##
+	sendfile on;
+	tcp_nopush on;
+	tcp_nodelay on;
+	keepalive_timeout 0;
+	types_hash_max_size 2048;
+	# server_tokens off;
+
+	# server_names_hash_bucket_size 64;
+	# server_name_in_redirect off;
+
+#	include /etc/nginx/mime.types;
+#	default_type application/octet-stream;
+
+	##
+	# Logging Settings
+	##
+	#access_log /var/log/nginx/access.log;
+	error_log /var/log/nginx/error.log;
+
+	##
+	# Virtual Host Configs
+	##
+	server {
+		listen 1337;
+
+		location / {
+			proxy_pass http://node;
+		}
+	}
+ 
+	upstream node {
+		server 127.0.0.1:8001;
+		server 127.0.0.1:8002;
+		server 127.0.0.1:8003;
+		server 127.0.0.1:8004;
+	}
 }
 
