--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -7,18 +7,8 @@ global
 	daemon
 
 defaults
-#	log	global
-	mode	http
+#	mode	http
 #	option http-tunnel
-#	option	httplog
-#	option	dontlognull
-#	errorfile 400 /etc/haproxy/errors/400.http
-#	errorfile 403 /etc/haproxy/errors/403.http
-#	errorfile 408 /etc/haproxy/errors/408.http
-#	errorfile 500 /etc/haproxy/errors/500.http
-#	errorfile 502 /etc/haproxy/errors/502.http
-#	errorfile 503 /etc/haproxy/errors/503.http
-#	errorfile 504 /etc/haproxy/errors/504.http
 
 frontend http-in
 	bind *:9000
