--- a/nginx.conf
+++ b/nginx.conf
@@ -1,47 +1,34 @@
 user www-data;
-worker_processes auto;
 pid /run/nginx.pid;
+worker_processes 1;
 
 events {
-	worker_connections 768;
+	worker_connections 1024;
 	multi_accept on;
 }
 
 http {
-	##
-	# Basic Settings
-	##
 	sendfile on;
 	tcp_nopush on;
 	tcp_nodelay on;
 	keepalive_timeout 0;
 	types_hash_max_size 2048;
-	# server_tokens off;
+	gzip off;
 
-	# server_names_hash_bucket_size 64;
-	# server_name_in_redirect off;
-
-#	include /etc/nginx/mime.types;
-#	default_type application/octet-stream;
-
-	##
-	# Logging Settings
-	##
-	#access_log /var/log/nginx/access.log;
 	error_log /var/log/nginx/error.log;
 
-	##
-	# Virtual Host Configs
-	##
 	server {
 		listen 1337;
 
 		location / {
 			proxy_pass http://node;
+			proxy_http_version 1.1;
+			proxy_set_header Connection "";
 		}
 	}
  
 	upstream node {
+		keepalive 100;
 		server 127.0.0.1:8001;
 		server 127.0.0.1:8002;
 		server 127.0.0.1:8003;
