run load test from another host

--- a/cluster-upstart.conf
+++ b/cluster-upstart.conf
@@ -2,7 +2,7 @@ description "Cluster of Node processes"
 
 limit nofile 1000000 1000000
 
-env PORT=7000
+env PORT={{ cluster_port }}
 export PORT
 
 chdir /root/
