--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -11,12 +11,11 @@ defaults
 #	option http-tunnel
 
 frontend http-in
-	bind *:9000
+	bind *:{{ haproxy_port }}
 	default_backend node
 
 backend node
-	server s1 127.0.0.1:8001
-	server s2 127.0.0.1:8002
-	server s3 127.0.0.1:8003
-	server s4 127.0.0.1:8004
+  {% for port in backend_ports %}
+    server s{{ port }} 127.0.0.1:{{ port }}
+  {% endfor %}
 
