--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,4 @@ nocows = 1
 host_key_checking = False
 inventory=inventory
 ansible_python_interpreter="/usr/bin/env python"
+private_key_file=.secret/id_rsa
