--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@ http {
 	error_log /var/log/nginx/error.log;
 
 	server {
-		listen 1337;
+		listen {{ nginx_port }};
 
 		location / {
 			proxy_pass http://node;
@@ -29,10 +29,9 @@ http {
  
 	upstream node {
 		keepalive 100;
-		server 127.0.0.1:8001;
-		server 127.0.0.1:8002;
-		server 127.0.0.1:8003;
-		server 127.0.0.1:8004;
+{% for port in backend_ports %}
+		server 127.0.0.1:{{ port }};
+{% endfor %}
 	}
 }
 
