--- a/nginx.conf
+++ b/nginx.conf
@@ -11,8 +11,8 @@ http {
 	sendfile on;
 	tcp_nopush on;
 	tcp_nodelay on;
-	keepalive_timeout 0;
 	types_hash_max_size 2048;
+	keepalive_requests 1000000;
 	gzip off;
 
 	error_log /var/log/nginx/error.log;
@@ -28,7 +28,7 @@ http {
 	}
  
 	upstream node {
-		keepalive 100;
+		keepalive 500;
 {% for port in backend_ports %}
 		server 127.0.0.1:{{ port }};
 {% endfor %}
