--- a/tasks/deploy.yml
+++ b/tasks/deploy.yml
@@ -32,7 +32,7 @@
 
 - name: Ensure cluster service
   service: state=restarted name=server-cluster
-  when: deploy_cluster_script_result.changed or deploy_cluster_upstart_result.changed
+  when: deploy_cluster_script_result.changed or deploy_cluster_upstart_result.changed or deploy_server_script_result.changed
   tags: cluster
 
 - name: Configure haproxy
