--- a/tasks/create-droplets.yml
+++ b/tasks/create-droplets.yml
@@ -56,7 +56,7 @@
         command=droplet
         name="cluster-tests-loadgen"
         region_id=ams3
-        size_id=512mb
+        size_id=16g
         image_id=ubuntu-14-04-x64
         ssh_key_ids={{ do_benchmark_key.ssh_key.id }}
         private_networking=yes
