--- a/tasks/provision-server.yml
+++ b/tasks/provision-server.yml
@@ -1,3 +1,29 @@
+# linux performance tweaks
+# https://www.kernel.org/doc/Documentation/networking/ip-sysctl.txt
+
+# Limit of socket listen() backlog, known in userspace as SOMAXCONN.
+# Defaults to 128.  See also tcp_max_syn_backlog for additional tuning
+# for TCP sockets.
+- name: Ensure big socket listen backlog
+  sysctl: name=net.core.somaxconn value=4096 state=present
+
+# Maximal number of remembered connection requests, which have not
+# received an acknowledgment from connecting client.
+# The minimal value is 128 for low memory machines, and it will
+# increase in proportion to the memory of machine.
+# If server suffers from overload, try increasing this number.
+#- name: Ensure big syn backlog
+#  sysctl: name=net.ipv4.tcp_max_syn_backlog value=1000 state=present
+
+# Maximum number  of  packets,  queued  on  the  INPUT  side, when the interface
+# receives packets faster than kernel can process them.
+# https://www.kernel.org/doc/Documentation/sysctl/net.txt
+- name: Ensure big packet backlog
+  sysctl: name=net.core.netdev_max_backlog value=65536 state=present
+
+- name: Ensure big OS connection backlog
+  sysctl: name=net.core.somaxconn value=5000 state=present
+
 - name: Add PPAs
   apt_repository: repo={{ item }} state=present
   with_items:
