--- a/tasks/test.yml
+++ b/tasks/test.yml
@@ -1,5 +1,5 @@
 - name: Bench single
-  shell: "/root/wrk2/wrk -t{{ threads }} -c{{ connections }} -d{{ time }} -R{{ throughput }} http://{{ server_private_ip }}:{{ single_port }}/ > /root/single.txt"
+  shell: "ulimit -n 10000 &&/root/wrk2/wrk -t{{ threads }} -c{{ connections }} -d{{ time }} -R{{ throughput }} http://{{ server_private_ip }}:{{ single_port }}/ > /root/single.txt"
   tags: single
 
 - name: Download single test result
@@ -7,7 +7,7 @@
   tags: single
 
 - name: Bench cluster
-  shell: "/root/wrk2/wrk -t{{ threads }} -c{{ connections }} -d{{ time }} -R{{ throughput }} http://{{ server_private_ip }}:{{ cluster_port }}/ > /root/cluster.txt"
+  shell: "ulimit -n 10000 && /root/wrk2/wrk -t{{ threads }} -c{{ connections }} -d{{ time }} -R{{ throughput }} http://{{ server_private_ip }}:{{ cluster_port }}/ > /root/cluster.txt"
   tags: cluster
 
 - name: Download cluster test result
@@ -15,7 +15,7 @@
   tags: cluster
 
 - name: Bench haproxy
-  shell: "/root/wrk2/wrk -t{{ threads }} -c{{ connections }} -d{{ time }} -R{{ throughput }} http://{{ server_private_ip }}:{{ haproxy_port }}/ > /root/haproxy.txt"
+  shell: "ulimit -n 10000 && /root/wrk2/wrk -t{{ threads }} -c{{ connections }} -d{{ time }} -R{{ throughput }} http://{{ server_private_ip }}:{{ haproxy_port }}/ > /root/haproxy.txt"
   tags: haproxy
 
 - name: Download haproxy test result
@@ -23,7 +23,7 @@
   tags: haproxy
 
 - name: Bench nginx
-  shell: "/root/wrk2/wrk -t{{ threads }} -c{{ connections }} -d{{ time }} -R{{ throughput }} http://{{ server_private_ip }}:{{ nginx_port }}/ > /root/nginx.txt"
+  shell: "ulimit -n 10000 && /root/wrk2/wrk -t{{ threads }} -c{{ connections }} -d{{ time }} -R{{ throughput }} http://{{ server_private_ip }}:{{ nginx_port }}/ > /root/nginx.txt"
   tags: nginx
 
 - name: Download nginx test result
